# PMT-ShapeAnalysis

./: AW_macro.cpp  Average_Waveforms.py  Pulse_Modelling.cpp  README.md  Spectra.cpp
calomissioning/: CMakeLists.txt  merge.c  plotter.py  read_rtd.cxx  rtd_output_analysis.py  sndisplay.py
pmt_he_study/: AAR_graph.py  ATC_comparison.py  CMakeLists.txt  README.md  Running_Notes.md  mf_injected_test.py  ntuple_reader.py  pmt_apulse_analysis.cpp  pmt_charge_analysis.cpp  setup.sh  start_env.sh  xml_reader.cpp
pmt_he_study/ATC25/: ATC25.conf
pmt_he_study/ATC25/ROOT_files/1400V/: 200404_A1400_B1400_t1128_output.root  200723_A1400_B1400_t0914_output.root  (+4 more)
pmt_he_study/ATC30/: ATC30.conf
pmt_he_study/ATC35/: ATC35.conf
pmt_he_study/ATC40/: filenames.txt
pmt_he_study/Graphs/: AAP_1400V_graph.py  AAR_1000V_graph.py  AAR_1000V_ratio_graph.py  AAR_1400V_graph.py  AAR_SpreadVsTimes.py  AAR_Spread_1400V.py  APM_1400V_graph.py  root_reader.py
pmt_he_study/WaveformGeneration/: ATC40Copy.conf  ApNumberDistribution.py  Baseline.txt  Matrix1.txt  MatrixPlot.py  MigrationMatrixMaker.py  ModellingAndEfficiency.py  RootReadingGraph.py  RootWaveformPlot.py  WaveformGen.conf  XML_waveform_gen.py  batch_xml_sim_reader.sh
pmt_he_study/WaveformGeneration/04022021APTesting/: A1400_B1400_t0000_GenAp.xml  A1400_B1400_t0000_TemplateAp.xml  A1400_B1400_t0001_GenAp.xml  A1400_B1400_t0001_TemplateAp.xml  A1400_B1400_t0002_GenAp.xml  A1400_B1400_t0002_TemplateAp.xml
pmt_he_study/WaveformGeneration/08022021APTesting/: A1400_B1400_t0000_BGAG.xml  A1400_B1400_t0000_BGAT.xml  A1400_B1400_t0000_BTAG.xml  A1400_B1400_t0000_BTAT.xml
pmt_he_study/WaveformGeneration/200101/: 200101Waveform1.txt  200101Waveform2.txt  200101Waveform4.txt  200101Waveform5.txt  A1400_B1400_t0001_M.xml  A1400_B1400_t0001_s.xml  A1400_B1400_t0002_M.xml  A1400_B1400_t0002_s.xml  A1400_B1400_t0003_s.xml  A1400_B1400_t0004_s.xml  A1400_B1400_t0005_s.xml
pmt_he_study/WaveformGeneration/200404/: 200404Waveform.txt  200404Waveform10.txt  200404Waveform2.txt  200404Waveform3.txt  200404Waveform4.txt  200404Waveform5.txt  200404Waveform6.txt  200404Waveform7.txt  200404Waveform8.txt  200404Waveform9.txt  A1400_B1400_t0299_s.xml  A1400_B1400_t0399_s.xml  A1400_B1400_t0499_s.xml  A1400_B1400_t0599_s.xml  A1400_B1400_t0699_s.xml  A1400_B1400_t0799_s.xml  A1400_B1400_t0899_s.xml  A1400_B1400_t0999_s.xml  A1400_B1400_t1099_s.xml  A1400_B1400_t1199_s.xml  testing2.xml
pmt_he_study/WaveformGeneration/201020/: 201020Waveform1.txt  201020Waveform2.txt  A1400_B1400_t0099_s.xml  A1400_B1400_t0199_s.xml
pmt_he_study/WaveformGeneration/GenerationTemplateTesting/: A1400_B1400_t0000_GG.xml  A1400_B1400_t0000_GT.xml  A1400_B1400_t0000_TG.xml  A1400_B1400_t0000_TT.xml
pmt_he_study/WaveformGeneration/RootFiles/: 08022021BGAG.root  08022021BGAT.root  08022021BTAG.root  08022021BTAT.root  09022021GeneratedBase.root  09022021TempBase.root  200101Wave1.root  200101Wave2.root  200101Wave3.root  200101Wave4.root  200101Wave5.root  200101WaveModified1.root  200101WaveModified2.root  APGeneration1.root  APGeneration2.root  APGeneration3.root  APTemplate1.root  APTemplate2.root  APTemplate3.root  BaseGenAPGen.root  BaseGenAPTemp.root  BaseTempAPGen.root  BaseTempAPTemp.root  test1.root  test10.root  test11.root  test12.root  test2.root  test3.root  test4.root  test5.root  test6.root  test7.root  test8.root  test9.root
pmt_he_study/WaveformGeneration/SmallApEffectShape/: ATC40Copy.conf
pmt_he_study/WaveformGeneration/VaryingApNumATC20/: ATC20Copy.conf
pmt_he_study/WaveformGeneration/batchBackup/: batch_xml_sim_reader.sh
pmt_he_study/batch_scripts/: batch_apulse_sweep.sh  batch_area_spectrum.sh  batch_xml_reader.sh
pmt_he_study/old_code/: Bi_FullSpec_fit_Nov.cpp  apulse_test.cpp  loop_all_waveforms_apulse.cpp  non_empty_waveform.cpp  pulse_template.cpp  waveform.cpp  waveform_reader.cpp
pmt_he_study/summary_files/: apulse_plotter.py  apulse_times.py  modelling_book.ipynb  res_plotter.py  resolution_plotter.ipynb
(+7263 files in other folders)
